@@ -1,18 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST nvidiabl-0.80-source-only.dkms.tar.gz 12735 SHA256 91c6f41b42f0f53938aacdaf426a7d76fce5c396ecf39a42d068a3de2e3c75a6 SHA512 ba206d5bf88cb8d4ee1e35938d85291668365a1237d2954287d7ba2014faa9210d32072d10fbcbbf1489efd5cd60480f5bad34e45975cced2468946437339c0d WHIRLPOOL 203a698f9f31c43ab14e5e8489a5189531b81e7aebc7da75d52029b8a45d3a8a5cdad45449ef31e1fb0c6e0d2414789af7b61d523dd573dbfe29b3cfe5321923
 DIST v0.81.tar.gz 14280 SHA256 2e8224f4720f312879a3cdaada66b762c574d88178ea24f1dda4016c54921b55 SHA512 29bce4d57f89db7664ad780785ef98db50f2c6394d2c012cc9e165c6c0c54a8798d51a18fd83cc5e1a2be34ab3d1d9447d24998a78cfa4d6a4bb1bb548384f28 WHIRLPOOL 237280df6e9b9a62318c6291e03698c772678d7d8ae633077ab276ae387fcc72e020e00f6e5c056d03f45d1c129fa23712eed1ef3b5b73f6e166e9d2063d853c
 DIST v0.83.tar.gz 448594 SHA256 0ea79770c02ae297fb6d660ee28ecf7a7acc346de0a55e3231ce499d4184db0f SHA512 cbf4f042acb9005c25d8d008973220f4d42fe890bfd86a34b72c0e56129dfcdcad2383acacf048e5e9da33aaf759053cdadeddac9e0946ae49a8a29ed03447dd WHIRLPOOL 4d1e13ffe1bed36ffee1c498c6384a9ff3fcc561e3aa443c15106baa9711523b8798f0283e42d6365afa57f8d7b4a394835bbea2eb8c6d41a8910c38d661012b
-EBUILD nvidiabl-0.80.ebuild 989 SHA256 2386fd5019eb7e7e6ee69c5e45cfdf5a5b5a79347d25240d6fde827eede85a20 SHA512 38500857a7ba1f55348cb8434c2fe38c51e37c9924a0e9bdd7434d029c48bd26d204d2a5afa78bdcd0a2d666c39ff5253cfc9232123c7bb2e5d7671f3a352a88 WHIRLPOOL 6801d411d0a898d0283785312a2cf2149f47e0f7bc90335260d04c4c3aadcf419f91904cd32179f915e79b72c368559bc557ef5d31979aac37baa660374c5aca
 EBUILD nvidiabl-0.81.ebuild 987 SHA256 ffdca3395025ab3c0e0e96f45cc436820ff6d5f81b4d6a281775006d2f52f24a SHA512 d6824ebaf3a2764ac073346aa776b3faf4f2ee328e126582354cff69f76b47384e60839ae3386cfdd04a9ee853b5e9dbd8fd26776fe22a770db94d1132d60684 WHIRLPOOL 9e3a9201421979faf354dd037c84b7ff46202d55b8fe0e8c2bbb58e31ce1995dfbf9e7278593a36fb81754772b1524644710bcd082253738efa989759d34eed8
-EBUILD nvidiabl-0.83.ebuild 989 SHA256 27cf48124a1d2edd3ff8e48e7d7e7446e19085685299e54594fefbd42b68de0d SHA512 e310aa461f5936fac3f79027f2aaaaf660ab46ae2ee7f03758de58293135b8076654225fbede37cf9d93be65bad67a1fd70041afe5d8abcb896f28a9fc525340 WHIRLPOOL b2c6bbd6da69fbae35d7f2208888ef8872ca806bc321e3b4f4a8156e4225cd1922917a3a4d1c9e6e84fea07a9645587932d06a8e103d7739f7392b016ad8a6e5
-MISC ChangeLog 2774 SHA256 243ce2086975ac7d4c537defce86462997110a2b6d31f1141bfe16e30dd4eac6 SHA512 b0946326d50d2cb01d14ce8bda9065f77c12a2cdbc2fd1831bacf975a7ee0373219cf9942eeb1143222e9adce07f7ec5026dd3ac476cfc822672be3e9425ae51 WHIRLPOOL 129b01302397b22aaeaf631571bfd932fe99fccbdd4ab794e6f98114adccb717d8d0c737552930b271ff39bf4f2a0738dd5808919c25701f9442d60f6e4ff925
+EBUILD nvidiabl-0.83.ebuild 988 SHA256 4e9bd0ba402fda9158d17117ffae5ce5679f77c20537fd906064cc7cc14cfb89 SHA512 69ce69148d085954ba7a869f1379fb3f697fdd726d1d3b18c4e456213ecd4bc1b92db620584d75407f40d3afc435c3119686c805de710181aa4b397e1a1d6835 WHIRLPOOL f91c60bf5e6eccca4f905aa7e9a289f242c97ba7ade3c5f7fb979661fccc90f623fc0b52739e4f8c3d02b6bc7990de1cc360012493512b2717aa148f0052459c
+MISC ChangeLog 2908 SHA256 7fcc1169e83cf032e7ae873fd0691d0d5655fe448e17140c74b912947609403e SHA512 6780c5ac00ec1b1913d5523f45cb4f318036a6275e677ba9aefa1f06b0758e575e28d295fa6e5a3e94dab55bebb8503352e04a2540739d5f8f65f4f1c6eebac8 WHIRLPOOL cb688345547e41bc9d6c633f2390749966cdd5ecf0edcf0be6ce5219149dfcde45917f49b6020150f68979a67fc44a7efec52d484d1ea45f848c9ad4859a2a8e
 MISC metadata.xml 214 SHA256 0e019c1dee563e5b23815be471ae1b65fcaf721a91ec48037446d41ca787d3e5 SHA512 701b8c51f43f8660d40700929c243a2dae9f19dcbc7b8eca877e20eadc1ae2e0c84f7c7d8c3cb576055c1a49a55e9c759ef469eeda67026ce252d341937f6691 WHIRLPOOL 977119e736e0795137df14faae681f7fa07ba8297a19ef4a7d7b93de7efceaed16f7103f179a762be41b8849c33c535b55d16d2fd0ea795df0525592752e0156
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.21 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlJDKucACgkQmWq1bYTyC0PLPwEAhDachQYi0wYyf3DENZt1FPXn
-am9FNv8hcM4L6yQf/4cA/Ap+DLHEFSfXnig+BaD5BYbJgZBDx5gV0BDyoEXOTvEx
-=ijVs
+iEYEAREIAAYFAlLSxHwACgkQCaWpQKGI+9TssgCeLvCWEzX/QOOHdaBhaAmPQ/FU
+aPkAnRX/S3O08zmtfehYW6smkiDGx4wP
+=XK6T
 -----END PGP SIGNATURE-----
