@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile install postinst postrm preinst pretend setup
-DEPEND=kernel_linux? ( virtual/modutils ) sys-apps/sed kernel_linux? ( virtual/linux-sources )
-DESCRIPTION=Linux driver for setting the backlight brightness on laptops using NVIDIA GPU
-EAPI=4
-HOMEPAGE=https://github.com/guillaumezin/nvidiabl
-IUSE=kernel_linux
-KEYWORDS=~amd64 ~x86
-LICENSE=GPL-2
-RDEPEND=kernel_linux? ( virtual/modutils )
-SLOT=0
-SRC_URI=mirror://github/guillaumezin/nvidiabl/nvidiabl-0.80-source-only.dkms.tar.gz
-_eclasses_=eutils	40081e8c7e7f7c4f9db349a1d6d52925	linux-info	a9cbd6bbe2b28166e403321882f3c73c	linux-mod	c07f7857b242a2407527aa521905cfba	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=834dd9b065e6fd07db4db1f1ea2b9dc7
