@@ -11,4 +11,4 @@ RESTRICT=test
 SLOT=0
 SRC_URI=https://github.com/guillaumezin/nvidiabl/archive/v0.83.tar.gz
 _eclasses_=eutils	40081e8c7e7f7c4f9db349a1d6d52925	linux-info	a9cbd6bbe2b28166e403321882f3c73c	linux-mod	c07f7857b242a2407527aa521905cfba	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=5e5eeb6a1f01d3c586ab9c04684aad0f
+_md5_=4ddab2f11da3960c50a522e442a8238d
