@@ -4,11 +4,11 @@ DESCRIPTION=The X2Go server
 EAPI=4
 HOMEPAGE=http://www.x2go.org
 IUSE=+doc +fuse postgres +sqlite
-KEYWORDS=~amd64 ~x86
+KEYWORDS=amd64 ~x86
 LICENSE=GPL-2
 RDEPEND=dev-perl/Capture-Tiny dev-perl/Config-Simple dev-perl/File-ReadBackwards media-fonts/font-cursor-misc media-fonts/font-misc-misc net-misc/nx net-misc/openssh x11-apps/xauth fuse? ( sys-fs/sshfs-fuse ) postgres? ( dev-perl/DBD-Pg ) sqlite? ( dev-perl/DBD-SQLite )
 REQUIRED_USE=|| ( postgres sqlite )
 SLOT=0
 SRC_URI=http://code.x2go.org/releases/source/x2goserver/x2goserver-4.0.1.12.tar.gz
 _eclasses_=eutils	40081e8c7e7f7c4f9db349a1d6d52925	multilib	892e597faee02a5b94eb02ab512e7622	systemd	9f063b2cc19c5e8030911372aa246c4e	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=c79c4ece63adc30e5ffb5c8a74fee121
+_md5_=f008a46484583c7825a009e2a4e50266
