@@ -6,15 +6,15 @@ AUX x2goserver.init 563 SHA256 c051f263ad2ad9b6064ce12098ad0c3d48b2a83a2c02ccd79
 DIST x2goserver-4.0.1.12.tar.gz 78958 SHA256 447c5e7b47e6b2bc087731ed26c827020130cc8530ca020a03f7f3ecadc308cc SHA512 30ce6c20cf0bf67ee162cda5d0cbbfd994ac47aa140e3c4cd6118b594ed8fbf83dbc961f2323694206c705f647f32dba8a7fc7bde4ef22be2d4936642865a3d3 WHIRLPOOL 9d4887a1dd701d361311850a8e936d7f22ecf76e1b4ee78b11feca6ec25d02419221b0fb2e72c440394f81e63ffa73762b33bd58123e7bd441e32446ce40814e
 DIST x2goserver-4.0.1.6.tar.gz 69513 SHA256 5aef214e98ad2a91e87429faed2a871abdd435a081c88f86430dcf175b0c6159 SHA512 4d8372059d478cddc0a373303bae12cf2008e0e7cb953ad21c0e4558df5dcdc8f1143a5458932d06f1f9ca595f926f316310ed5623881605a76997c0d34d6b07 WHIRLPOOL c08660399640d889c6fd4e6c844196022e3b212d31a8a6d9d9c1257ea364cacaf4eee62e0f5fe4b286c56a7bd53c929deff245d9e2ff0481e7fd006e77a45c7b
 DIST x2goserver-4.0.1.8.tar.gz 71258 SHA256 514377271e59287bc03cfa09e098648236b0604e31e61fa631b1c8af1990cc32 SHA512 60f6ca8331e2ba3587e5efddd0f3a6c9166ef44b093a9ca4d79be9c2eb2ce6f54801eaafa1fb20068b623086971adcd902578c9bfa5afc335404d286813db7c4 WHIRLPOOL 3d7c679152f1912ea88a325f06e5e2133841fe99e6668211a9665da6d78c7ad6d75f01822f51c97781bbe691601996c5e8e66f84444e5e6aa83d11522144ae2c
-EBUILD x2goserver-4.0.1.12.ebuild 2401 SHA256 b1031139b4cd5096a322186fafcc276577f0d8a2135173c7b6efe8be569d14d9 SHA512 7fbb41878cb52cba913ca3a285e7287550fc8e3a72f481849824306b49a39ad08acf663f7fcc185789e8b0b0fe4e641908ae0b5eca8a3aa87f795e3ad617051e WHIRLPOOL e73b0d63430642028eaf5d5026d0b756b4fcbda898fc8fd68864dbe0b1b957098387e0ece3478ee8c9575858db50afb4e8904eac4bf5e7a953eaa8568a985b16
+EBUILD x2goserver-4.0.1.12.ebuild 2397 SHA256 4db37aeed6adb29a5611311c240c925fffc895cac8afd9d3913a96bd89925241 SHA512 3310ded3c9b9e0f50fc4be08600182eab6b275340c4e37131a10c62288b4c9e0164bc08c8b9630ee854981e6ac566fe573c585bc15b977acbbb4b5d0aef1f447 WHIRLPOOL ce94abdc5394e751872176b1db444c34fd625f0347d9ffb888dab2874323fafa887595b19a75ec595321baf31e1b204998ec38bb18e5f3f22cbd8a14338dda01
 EBUILD x2goserver-4.0.1.6-r1.ebuild 2069 SHA256 4e71af9206b18263ecf29e78a8f8a601dbdb344ac44a647b5e30b27b2083416c SHA512 25e7dc6baedfc1b9421f8b27288c14c8ae5f2ea682a56b135f8861f9eda43ae288870819aff31392f7c09b92b709a47a1aa07b972bb54f232c559a549f684e3f WHIRLPOOL 797ecbea37352cf8e726155e34118bd5c1751264a14f94a2d3788f0776c6ff891f43f06069bf73b7f5959d59be4e013cae3ffd38d303f6ced1f792cef4c466b5
 EBUILD x2goserver-4.0.1.8.ebuild 2348 SHA256 1909e562eaba6ee92bd37de1846b274d7448d2744f5a0a5c1592a2545907ab48 SHA512 82f27c417f94e0ea02fed27609fe7f5f8a96a65723cdd58577a6ab322f44ea8e338ed00c6fb4d8b4ddeefb96a490b883e43df2960e9bed88a211a2329a95320e WHIRLPOOL ef63a0ccb8f1a8cb90439412c50bfffc8f6e41dba82c6f020dcd650fa2d41739268996f10fec79f56855ebe37665850ad1056f02b9b407232112438d07d4f3da
-MISC ChangeLog 7443 SHA256 23f5f69a286963e18807c3b0d9fef4f9a26d51fc19f71ed6f8a89a7313d00c81 SHA512 72808e176939ccd4f929735185b61918ecb89aab9b0222e2706e7c8192eae4b0433753bfeccb5646ea9d369a35f822287448599514c14db4d9dd58ef48ba51df WHIRLPOOL 6bcd35d920a8fa336bdbd299777db366ddd3c4d5b6620647afca732ffa524686ec30b4af98762d1c14835ea02abb43b8201aec046acba2172e0fae7bfd523952
+MISC ChangeLog 7543 SHA256 f032e6d40970f61c04e78b7203a76e8ebdd08a28761bfeebb97848158859c65e SHA512 27b80f3cbda1113a77cb8fc4b9f51467b5f3a8146a4a39d46ee19aa8d5b2a1f7f381755b71e0d9f0a0656ecf1f415d566ee900a5c40257ec9955ab1e68855aac WHIRLPOOL 0cbc43915d599305b43b290b15328d8a5c4e673243e29372a9ad831fb6b83d4186b849a9257a5e022fd410bb888868005de6f54fe7d2881eee4d3afb739e72a4
 MISC metadata.xml 307 SHA256 b19b0330b6614bc27421032b94f6ade24661e38c818140c598d50cb91e82bce6 SHA512 05ebd620c55763866f5be95eeef6c46ceb2f424023df9f0f46a4d675bf06efe95120ecc5bd3f752c6f762c11b5c4152005458cac3dd5797a4b52def34729024a WHIRLPOOL 5441c1a1e9879a9aac8481ebc51821a5ec2f4bf896eb8a7a8d77db4534edd310e314852f234311b6f4c05f6b5947eac7f7a3677f195c056252fed5c4c411f6b9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlLOzQoACgkQFYEBGcdFJfKFIQEAlB797CaB07M7Hao7AlQMJ689
-uLrIt7Fr9ozU0L4HL/MBAJMSQzBMsZjsngQsasIqjdhdF8t/TAdU0nOd2MiBw4MA
-=dtuo
+iEYEAREIAAYFAlLSyV4ACgkQCaWpQKGI+9QG0QCgh78iYGeJAGV/LMBRJZ89UXuz
+btwAmgPF4beguSiCGSyGXV8x3GmgW/f1
+=kKAt
 -----END PGP SIGNATURE-----
