@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/x2goserver
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/x2goserver/ChangeLog,v 1.37 2014/01/09 16:23:33 voyageur Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/x2goserver/ChangeLog,v 1.38 2014/01/12 16:57:01 pacho Exp $
+
+  12 Jan 2014; Pacho Ramos <pacho@gentoo.org> x2goserver-4.0.1.12.ebuild:
+  amd64 stable, bug #497260
 
 *x2goserver-4.0.1.12 (09 Jan 2014)
 
