@@ -1,6 +1,10 @@
 # ChangeLog for app-laptop/nvidiabl
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-laptop/nvidiabl/ChangeLog,v 1.19 2013/09/25 18:26:47 angelos Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-laptop/nvidiabl/ChangeLog,v 1.20 2014/01/12 16:36:11 pacho Exp $
+
+  12 Jan 2014; Pacho Ramos <pacho@gentoo.org> -nvidiabl-0.80.ebuild,
+  nvidiabl-0.83.ebuild:
+  Don't make kernel check fatal, drop old
 
 *nvidiabl-0.83 (25 Sep 2013)
 
